--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,12 @@
 $color: steelblue;
+$backgroundColor: #333333;
+$fontColor: #e0dede;
+
+
+* {
+    background-color: $backgroundColor;
+    color: $fontColor
+}
 
 .my-flix{
     color: $color;
