--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,6 +1,7 @@
 .card{
     min-height: 200px !important;
     border: solid white !important;
+    
 }
 
 .card-title{
@@ -10,6 +11,7 @@
 .card-text{
     text-align: center;
     font-size: 14px !important;
+    
 }
 
 .open-button{
@@ -17,4 +19,5 @@
     bottom: 0;
     margin-bottom: 10px;
     margin-left: 75px;
+    background-color: #ffc107 !important;
 }
